Twenty Fourteen: Fix display of center-aligned images with captions in TinyMCE.
props RDall.
fixes #28048.
Built from https://develop.svn.wordpress.org/trunk@28941


git-svn-id: http://core.svn.wordpress.org/trunk@28739 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/css/editor-style.css
+++ b/wp-content/themes/twentyfourteen/css/editor-style.css
@@ -420,7 +420,7 @@ img {
 }
 
 .wp-caption.aligncenter {
-	margin: 7px 0;
+	margin: 7px auto;
 }
 
 .wp-caption-dt {
